codepkg/objects/Email_Order_Detail__c.object
<CustomObject>
    <description>This Object contains all the details of Email addresses and User groups to which Mail should be sent on creation of Order.</description>
    <fields>
        <fullName>Additional_Email_Addresses__c</fullName>
        <description>This field should contain additional Email addresses if any.</description>
        <inlineHelpText>This field should contain additional Email addresses which are not as part of Group.</inlineHelpText>
        <label>Additional Email Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <label>Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory Allocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>This should Contain User Group Name</description>
        <label>Group Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalCSUrl__c</fullName>
        <label>InternalCSUrl</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_to_Country__c</fullName>
        <description>These are list of Countries, For each country there is a specific group and mail should be sent to that group.</description>
        <label>Order to Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia - Mainetti Australia Pty Ltd</fullName>
                </value>
                <value>
                    <fullName>Bangladesh - Bengal Plastic Industries</fullName>
                </value>
                <value>
                    <fullName>Bangladesh - Mainetti (Bangladesh) PVT Ltd</fullName>
                </value>
                <value>
                    <fullName>Cambodia - Jin Jin</fullName>
                </value>
                <value>
                    <fullName>Cambodia - Jinjin Cambodia Co. Ltd</fullName>
                </value>
                <value>
                    <fullName>Central Americas -  H.B. Trim Co. Inc.</fullName>
                </value>
                <value>
                    <fullName>China - Suzhou Mainetti Plastic Products Ltd</fullName>
                </value>
                <value>
                    <fullName>Egypt - Elkekhia Group Ltd</fullName>
                </value>
                <value>
                    <fullName>Fletcher</fullName>
                </value>
                <value>
                    <fullName>France - Roybier et Fils</fullName>
                </value>
                <value>
                    <fullName>Guatemala - H.B. International Trim , S.A</fullName>
                </value>
                <value>
                    <fullName>Hong Kong - Mainetti (HK) Ltd</fullName>
                </value>
                <value>
                    <fullName>India - Mainetti (India) Pvt Ltd</fullName>
                </value>
                <value>
                    <fullName>Indonesia - PT. Mainetti Packaging Solution</fullName>
                </value>
                <value>
                    <fullName>Italy - Mainetti Omaf Srl</fullName>
                </value>
                <value>
                    <fullName>Italy - Mainetti SpA</fullName>
                </value>
                <value>
                    <fullName>Korea - Mainetti Korea Co. Ltd</fullName>
                </value>
                <value>
                    <fullName>Malaysia - MHL Industries (Malaysia) Sdn Bhd</fullName>
                </value>
                <value>
                    <fullName>Mexico - Ganchos Freilaj</fullName>
                </value>
                <value>
                    <fullName>Morocco - Mainetti Smaco SA</fullName>
                </value>
                <value>
                    <fullName>Netherlands - Mainetti BV</fullName>
                </value>
                <value>
                    <fullName>North China – Suzhou Mainetti Plastic Products Ltd</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Pakistan - Alupak</fullName>
                </value>
                <value>
                    <fullName>Pakistan - Mainetti Pakistan (Pvt) Ltd.</fullName>
                </value>
                <value>
                    <fullName>Peru - Hangers Trading E.I.R.L.</fullName>
                </value>
                <value>
                    <fullName>Philippines - Lexan</fullName>
                </value>
                <value>
                    <fullName>Philippines - Lexan Industrial Corporation</fullName>
                </value>
                <value>
                    <fullName>Portugal - Mainetti Cabides, Lda</fullName>
                </value>
                <value>
                    <fullName>Romania - Mainetti Romania S.R.L.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer Code</label>
        <referenceTo>Retailer_Code__c</referenceTo>
        <relationshipLabel>Email Order Details</relationshipLabel>
        <relationshipName>Email_Order_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>URLString__c</fullName>
        <label>URLString</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Email Order Detail</label>
    <listViews>
        <fullName>All_Ivy</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Order_to_Country__c</columns>
        <columns>Additional_Email_Addresses__c</columns>
        <columns>Market__c</columns>
        <columns>Remarks__c</columns>
        <columns>URLString__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_List</label>
    </listViews>
    <listViews>
        <fullName>EU_Market</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Order_to_Country__c</columns>
        <columns>Additional_Email_Addresses__c</columns>
        <columns>Market__c</columns>
        <columns>URLString__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>contains</operation>
            <value>EU</value>
        </filters>
        <label>_EU Market</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>InvAllocation_DECATHLON</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Order_to_Country__c</columns>
        <columns>Additional_Email_Addresses__c</columns>
        <columns>Remarks__c</columns>
        <columns>URLString__c</columns>
        <columns>Alert_Type__c</columns>
        <columns>Retailer_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>equals</operation>
            <value>DECATHLON</value>
        </filters>
        <filters>
            <field>Alert_Type__c</field>
            <operation>equals</operation>
            <value>Inventory Allocation</value>
        </filters>
        <label>_InvAllocation_DECATHLON</label>
        <sharedTo>
            <role>Administrator_Role</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>InvAllocation_TARGET</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Order_to_Country__c</columns>
        <columns>Additional_Email_Addresses__c</columns>
        <columns>Remarks__c</columns>
        <columns>URLString__c</columns>
        <columns>Alert_Type__c</columns>
        <columns>Retailer_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>equals</operation>
            <value>TARGET</value>
        </filters>
        <filters>
            <field>Alert_Type__c</field>
            <operation>equals</operation>
            <value>Inventory Allocation</value>
        </filters>
        <label>_InvAllocation_TARGET</label>
        <sharedTo>
            <role>Administrator_Role</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Macre</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Order_to_Country__c</columns>
        <columns>Additional_Email_Addresses__c</columns>
        <columns>Market__c</columns>
        <columns>URLString__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Order_to_Country__c</field>
            <operation>equals</operation>
            <value>South China / Hong Kong - MainettiCare Health Technologies</value>
        </filters>
        <label>__MCare</label>
    </listViews>
    <listViews>
        <fullName>REST_Market</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Order_to_Country__c</columns>
        <columns>Additional_Email_Addresses__c</columns>
        <columns>Market__c</columns>
        <columns>URLString__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>contains</operation>
            <value>REST</value>
        </filters>
        <label>_REST Market</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>UK_Market</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Order_to_Country__c</columns>
        <columns>Additional_Email_Addresses__c</columns>
        <columns>Market__c</columns>
        <columns>URLString__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>contains</operation>
            <value>UK</value>
        </filters>
        <label>_UK Market</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>US_Market</fullName>
        <columns>NAME</columns>
        <columns>Group_Name__c</columns>
        <columns>Order_to_Country__c</columns>
        <columns>Additional_Email_Addresses__c</columns>
        <columns>Market__c</columns>
        <columns>URLString__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>contains</operation>
            <value>US</value>
        </filters>
        <label>_US Market</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EMAIL-{0000}</displayFormat>
        <label>Email Order Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Order Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>